# swagger/swagger.yml
@@ -11,121 +11,6 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
 basePath: /v1
 paths:
-  /enfasis/:
-    get:
-      tags:
-      - enfasis
-      description: get Enfasis
-      operationId: EnfasisController.Get All
-      parameters:
-      - in: query
-        name: query
-        description: Filter. e.g. col1:v1,col2:v2 ...
-        type: string
-      - in: query
-        name: fields
-        description: Fields returned. e.g. col1,col2 ...
-        type: string
-      - in: query
-        name: sortby
-        description: Sorted-by fields. e.g. col1,col2 ...
-        type: string
-      - in: query
-        name: order
-        description: Order corresponding to each sortby field, if single value, apply
-          to all sortby fields. e.g. desc,asc ...
-        type: string
-      - in: query
-        name: limit
-        description: Limit the size of result set. Must be an integer
-        type: string
-      - in: query
-        name: offset
-        description: Start position of result set. Must be an integer
-        type: string
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Enfasis'
-        "403":
-          description: ""
-    post:
-      tags:
-      - enfasis
-      description: create Enfasis
-      operationId: EnfasisController.Post
-      parameters:
-      - in: body
-        name: body
-        description: body for Enfasis content
-        required: true
-        schema:
-          $ref: '#/definitions/models.Enfasis'
-      responses:
-        "201":
-          description: '{int} models.Enfasis'
-        "403":
-          description: body is empty
-  /enfasis/{id}:
-    get:
-      tags:
-      - enfasis
-      description: get Enfasis by id
-      operationId: EnfasisController.Get One
-      parameters:
-      - in: path
-        name: id
-        description: The key for staticblock
-        required: true
-        type: string
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Enfasis'
-        "403":
-          description: :id is empty
-    put:
-      tags:
-      - enfasis
-      description: update the Enfasis
-      operationId: EnfasisController.Put
-      parameters:
-      - in: path
-        name: id
-        description: The id you want to update
-        required: true
-        type: string
-      - in: body
-        name: body
-        description: body for Enfasis content
-        required: true
-        schema:
-          $ref: '#/definitions/models.Enfasis'
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Enfasis'
-        "403":
-          description: :id is not int
-    delete:
-      tags:
-      - enfasis
-      description: delete the Enfasis
-      operationId: EnfasisController.Delete
-      parameters:
-      - in: path
-        name: id
-        description: The id you want to delete
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{string} delete success!'
-        "403":
-          description: id is empty
   /metodologia/:
     get:
       tags:
@@ -587,26 +472,6 @@ paths:
         "404":
           description: not found resource
 definitions:
-  models.Enfasis:
-    title: Enfasis
-    type: object
-    properties:
-      Activo:
-        type: boolean
-      CodigoAbreviacion:
-        type: string
-      Descripcion:
-        type: string
-      Id:
-        type: integer
-        format: int64
-      Nombre:
-        type: string
-      NumeroOrden:
-        type: number
-        format: double
-      ProgramaAcademico:
-        $ref: '#/definitions/models.ProgramaAcademico'
   models.Metodologia:
     title: Metodologia
     type: object
@@ -616,6 +481,8 @@ definitions:
       CodigoAbreviacion:
         type: string
       Descripcion:
+        type: string
+      FechaModificacion:
         type: string
       Id:
         type: integer
@@ -635,6 +502,8 @@ definitions:
         type: string
       Descripcion:
         type: string
+      FechaModificacion:
+        type: string
       Id:
         type: integer
         format: int64
@@ -653,6 +522,8 @@ definitions:
       Duracion:
         type: number
         format: double
+      FechaModificacion:
+        type: string
       Id:
         type: integer
         format: int64
@@ -683,6 +554,8 @@ definitions:
         type: string
       Descripcion:
         type: string
+      FechaModificacion:
+        type: string
       Id:
         type: integer
         format: int64
@@ -704,6 +577,3 @@ tags:
 - name: programa_academico
   description: |
     oprations for ProgramaAcademico
-- name: enfasis
-  description: |
-    EnfasisController operations for Enfasis
